--- a/data/ui/MenulibreWindow.ui
+++ b/data/ui/MenulibreWindow.ui
@@ -315,20 +315,6 @@ See http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07.html for 
     <property name="icon_name">edit-delete-symbolic</property>
     <property name="use_fallback">True</property>
   </object>
-  <object class="GtkImage" id="image11">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="icon_name">gtk-open</property>
-    <property name="use_fallback">True</property>
-    <property name="icon_size">1</property>
-  </object>
-  <object class="GtkImage" id="image12">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="icon_name">gtk-open</property>
-    <property name="use_fallback">True</property>
-    <property name="icon_size">1</property>
-  </object>
   <object class="GtkImage" id="image13">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -1128,41 +1114,12 @@ See http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spec-lates
                                                   </packing>
                                                 </child>
                                                 <child>
-                                                  <object class="GtkBox" id="box12">
+                                                  <object class="GtkEntry" id="entry_Exec">
                                                     <property name="visible">True</property>
-                                                    <property name="can_focus">False</property>
+                                                    <property name="can_focus">True</property>
                                                     <property name="hexpand">True</property>
-                                                    <child>
-                                                      <object class="GtkEntry" id="entry_Exec">
-                                                        <property name="visible">True</property>
-                                                        <property name="can_focus">True</property>
-                                                        <property name="invisible_char">•</property>
-                                                      </object>
-                                                      <packing>
-                                                        <property name="expand">True</property>
-                                                        <property name="fill">True</property>
-                                                        <property name="position">0</property>
-                                                      </packing>
-                                                    </child>
-                                                    <child>
-                                                      <object class="GtkButton" id="button_Exec">
-                                                        <property name="visible">True</property>
-                                                        <property name="can_focus">True</property>
-                                                        <property name="receives_default">True</property>
-                                                        <property name="tooltip_markup" translatable="yes">Browse…</property>
-                                                        <property name="tooltip_text" translatable="yes">Browse…</property>
-                                                        <property name="image">image11</property>
-                                                        <property name="focus_on_click">False</property>
-                                                      </object>
-                                                      <packing>
-                                                        <property name="expand">False</property>
-                                                        <property name="fill">True</property>
-                                                        <property name="position">1</property>
-                                                      </packing>
-                                                    </child>
-                                                    <style>
-                                                      <class name="linked"/>
-                                                    </style>
+                                                    <property name="invisible_char">•</property>
+                                                    <property name="secondary_icon_name">folder-open</property>
                                                   </object>
                                                   <packing>
                                                     <property name="left_attach">1</property>
@@ -1170,40 +1127,12 @@ See http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spec-lates
                                                   </packing>
                                                 </child>
                                                 <child>
-                                                  <object class="GtkBox" id="box17">
+                                                  <object class="GtkEntry" id="entry_Path">
                                                     <property name="visible">True</property>
-                                                    <property name="can_focus">False</property>
-                                                    <child>
-                                                      <object class="GtkEntry" id="entry_Path">
-                                                        <property name="visible">True</property>
-                                                        <property name="can_focus">True</property>
-                                                        <property name="invisible_char">•</property>
-                                                      </object>
-                                                      <packing>
-                                                        <property name="expand">True</property>
-                                                        <property name="fill">True</property>
-                                                        <property name="position">0</property>
-                                                      </packing>
-                                                    </child>
-                                                    <child>
-                                                      <object class="GtkButton" id="button_Path">
-                                                        <property name="visible">True</property>
-                                                        <property name="can_focus">True</property>
-                                                        <property name="receives_default">True</property>
-                                                        <property name="tooltip_markup" translatable="yes">Browse…</property>
-                                                        <property name="tooltip_text" translatable="yes">Browse…</property>
-                                                        <property name="image">image12</property>
-                                                        <property name="focus_on_click">False</property>
-                                                      </object>
-                                                      <packing>
-                                                        <property name="expand">False</property>
-                                                        <property name="fill">True</property>
-                                                        <property name="position">1</property>
-                                                      </packing>
-                                                    </child>
-                                                    <style>
-                                                      <class name="linked"/>
-                                                    </style>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="hexpand">True</property>
+                                                    <property name="invisible_char">•</property>
+                                                    <property name="secondary_icon_name">folder-open</property>
                                                   </object>
                                                   <packing>
                                                     <property name="left_attach">1</property>
