--- a/data/ui/MenulibreWindow.ui
+++ b/data/ui/MenulibreWindow.ui
@@ -516,23 +516,6 @@ See http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07.html for 
                     <property name="border_width">4</property>
                     <property name="spacing">12</property>
                     <child>
-                      <object class="GtkBox" id="box_add">
-                        <property name="width_request">32</property>
-                        <property name="height_request">32</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="homogeneous">True</property>
-                        <child>
-                          <placeholder/>
-                        </child>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">True</property>
-                        <property name="position">0</property>
-                      </packing>
-                    </child>
-                    <child>
                       <object class="GtkButton" id="toolbar_save_launcher">
                         <property name="width_request">32</property>
                         <property name="height_request">32</property>
@@ -551,7 +534,7 @@ See http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07.html for 
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkBox" id="box9">
+                      <object class="GtkBox" id="history_buttons">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="homogeneous">True</property>
@@ -644,58 +627,6 @@ See http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07.html for 
               </object>
               <packing>
                 <property name="expand">True</property>
-                <property name="homogeneous">True</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkToolItem" id="toolbar_right">
-                <property name="height_request">32</property>
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <child>
-                  <object class="GtkBox" id="box11">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="spacing">12</property>
-                    <child>
-                      <object class="GtkSearchEntry" id="toolbar_search">
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="primary_icon_name">edit-find-symbolic</property>
-                        <property name="primary_icon_activatable">False</property>
-                        <property name="primary_icon_sensitive">False</property>
-                        <property name="placeholder_text" translatable="yes">Search terms…</property>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">True</property>
-                        <property name="position">0</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkBox" id="app_menu_holder">
-                        <property name="width_request">32</property>
-                        <property name="height_request">32</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="margin_top">4</property>
-                        <property name="margin_bottom">4</property>
-                        <property name="orientation">vertical</property>
-                        <child>
-                          <placeholder/>
-                        </child>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">True</property>
-                        <property name="position">1</property>
-                      </packing>
-                    </child>
-                  </object>
-                </child>
-              </object>
-              <packing>
-                <property name="expand">False</property>
                 <property name="homogeneous">True</property>
               </packing>
             </child>
@@ -1731,5 +1662,13 @@ See http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spec-lates
       <action-widget response="-6">icon_selection_cancel</action-widget>
       <action-widget response="-10">icon_selection_apply</action-widget>
     </action-widgets>
+  </object>
+  <object class="GtkSearchEntry" id="toolbar_search">
+    <property name="visible">True</property>
+    <property name="can_focus">True</property>
+    <property name="primary_icon_name">edit-find-symbolic</property>
+    <property name="primary_icon_activatable">False</property>
+    <property name="primary_icon_sensitive">False</property>
+    <property name="placeholder_text" translatable="yes">Search terms…</property>
   </object>
 </interface>
