--- a/data/ui/MenulibreWindow.ui
+++ b/data/ui/MenulibreWindow.ui
@@ -302,36 +302,12 @@ See http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07.html for 
       </object>
     </child>
   </object>
-  <object class="GtkImage" id="image1">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="pixel_size">16</property>
-    <property name="icon_name">dialog-cancel</property>
-  </object>
   <object class="GtkImage" id="image10">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="pixel_size">16</property>
     <property name="icon_name">edit-delete-symbolic</property>
     <property name="use_fallback">True</property>
-  </object>
-  <object class="GtkImage" id="image13">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="pixel_size">16</property>
-    <property name="icon_name">dialog-apply</property>
-  </object>
-  <object class="GtkImage" id="image2">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="pixel_size">16</property>
-    <property name="icon_name">dialog-apply</property>
-  </object>
-  <object class="GtkImage" id="image3">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="pixel_size">16</property>
-    <property name="icon_name">dialog-cancel</property>
   </object>
   <object class="GtkImage" id="image4">
     <property name="visible">True</property>
@@ -837,51 +813,12 @@ See http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07.html for 
                                                   </packing>
                                                 </child>
                                                 <child>
-                                                  <object class="GtkBox" id="box_Name">
-                                                    <property name="can_focus">False</property>
+                                                  <object class="GtkEntry" id="entry_Name">
+                                                    <property name="can_focus">True</property>
                                                     <property name="no_show_all">True</property>
-                                                    <child>
-                                                      <object class="GtkEntry" id="entry_Name">
-                                                        <property name="visible">True</property>
-                                                        <property name="can_focus">True</property>
-                                                        <property name="invisible_char">•</property>
-                                                        <property name="placeholder_text" translatable="yes">Application Name</property>
-                                                      </object>
-                                                      <packing>
-                                                        <property name="expand">True</property>
-                                                        <property name="fill">True</property>
-                                                        <property name="position">0</property>
-                                                      </packing>
-                                                    </child>
-                                                    <child>
-                                                      <object class="GtkButton" id="cancel_Name">
-                                                        <property name="visible">True</property>
-                                                        <property name="can_focus">True</property>
-                                                        <property name="receives_default">True</property>
-                                                        <property name="image">image1</property>
-                                                      </object>
-                                                      <packing>
-                                                        <property name="expand">False</property>
-                                                        <property name="fill">True</property>
-                                                        <property name="position">1</property>
-                                                      </packing>
-                                                    </child>
-                                                    <child>
-                                                      <object class="GtkButton" id="apply_Name">
-                                                        <property name="visible">True</property>
-                                                        <property name="can_focus">True</property>
-                                                        <property name="receives_default">True</property>
-                                                        <property name="image">image2</property>
-                                                      </object>
-                                                      <packing>
-                                                        <property name="expand">False</property>
-                                                        <property name="fill">True</property>
-                                                        <property name="position">2</property>
-                                                      </packing>
-                                                    </child>
-                                                    <style>
-                                                      <class name="linked"/>
-                                                    </style>
+                                                    <property name="invisible_char">•</property>
+                                                    <property name="secondary_icon_name">dialog-apply</property>
+                                                    <property name="placeholder_text" translatable="yes">Application Name</property>
                                                   </object>
                                                   <packing>
                                                     <property name="expand">False</property>
@@ -925,51 +862,12 @@ See http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07.html for 
                                                   </packing>
                                                 </child>
                                                 <child>
-                                                  <object class="GtkBox" id="box_Comment">
-                                                    <property name="can_focus">False</property>
+                                                  <object class="GtkEntry" id="entry_Comment">
+                                                    <property name="can_focus">True</property>
                                                     <property name="no_show_all">True</property>
-                                                    <child>
-                                                      <object class="GtkEntry" id="entry_Comment">
-                                                        <property name="visible">True</property>
-                                                        <property name="can_focus">True</property>
-                                                        <property name="invisible_char">•</property>
-                                                        <property name="placeholder_text" translatable="yes">Description</property>
-                                                      </object>
-                                                      <packing>
-                                                        <property name="expand">True</property>
-                                                        <property name="fill">True</property>
-                                                        <property name="position">0</property>
-                                                      </packing>
-                                                    </child>
-                                                    <child>
-                                                      <object class="GtkButton" id="cancel_Comment">
-                                                        <property name="visible">True</property>
-                                                        <property name="can_focus">True</property>
-                                                        <property name="receives_default">True</property>
-                                                        <property name="image">image3</property>
-                                                      </object>
-                                                      <packing>
-                                                        <property name="expand">False</property>
-                                                        <property name="fill">True</property>
-                                                        <property name="position">1</property>
-                                                      </packing>
-                                                    </child>
-                                                    <child>
-                                                      <object class="GtkButton" id="apply_Comment">
-                                                        <property name="visible">True</property>
-                                                        <property name="can_focus">True</property>
-                                                        <property name="receives_default">True</property>
-                                                        <property name="image">image13</property>
-                                                      </object>
-                                                      <packing>
-                                                        <property name="expand">False</property>
-                                                        <property name="fill">True</property>
-                                                        <property name="position">2</property>
-                                                      </packing>
-                                                    </child>
-                                                    <style>
-                                                      <class name="linked"/>
-                                                    </style>
+                                                    <property name="invisible_char">•</property>
+                                                    <property name="secondary_icon_name">dialog-apply</property>
+                                                    <property name="placeholder_text" translatable="yes">Description</property>
                                                   </object>
                                                   <packing>
                                                     <property name="expand">False</property>
